report4/doc/vocabularium/vkbo/onderneming/v1.0.0/jsonld-validation.report.md
#||# oslo-jsonld-validator   

#||# -------------------------------------  

2026-06-17T18:03:32.935Z info: Loaded 54 URI prefixes into whitelist

2026-06-17T18:03:33.056Z warn: Found sentence without a '.': 'Grootte van een organisatie uitgedrukt door middel van een bereik' for subject: [urn:oslo-toolchain:74c12a0a2ede6b2af34c6acf9f955c6cf542c8588855fe85504796d8a2fb190c](all-onderneming.jsonld#L3591)

2026-06-17T18:03:33.058Z error: Found missing class or attribute (GeregistreerdeOrganisatie): [[urn:oslo-toolchain:95720ce982042b7641adcf5dc9f8ac1e7919d33b5ab85f710369d76164bfd263](all-onderneming.jsonld#L3214)](all-onderneming.jsonld#L191) in Vocabulary

2026-06-17T18:03:33.058Z error: Found missing class or attribute (Veranderingsgebeurtenis): [urn:oslo-toolchain:ad8cc46e035270088a084c621cca5b959f4a176ac6ad4cd8f91d02a0ac735d43](all-onderneming.jsonld#L232) in Vocabulary

2026-06-17T18:03:33.058Z error: Found missing class or attribute (Vestiging): [urn:oslo-toolchain:8efe4d2e55ae333e5eea4a43336168a028c18fa467255b54c301a5b0f436a3b9](all-onderneming.jsonld#L262) in Vocabulary

2026-06-17T18:03:33.058Z error: Found missing class or attribute (Activiteit): [[urn:oslo-toolchain:efacad245ea79b62969da0daf0ade5e865d83c070c9882cbbfe3914cb195edbb](all-onderneming.jsonld#L3299)](all-onderneming.jsonld#L321) in Vocabulary

2026-06-17T18:03:33.058Z error: Found missing class or attribute (Oprichting): [urn:oslo-toolchain:2b1d54a5c109cfed716d5857a68d7b8cd04f2183f00d68c3746e5fafbca63d12](all-onderneming.jsonld#L356) in Vocabulary

2026-06-17T18:03:33.058Z error: Found missing class or attribute (identificator): [urn:oslo-toolchain:361480e48143c63af3ef9ee8c1013816f3073400a2abd8cfba3f7141c73bc45a](all-onderneming.jsonld#L1812) in Vocabulary

2026-06-17T18:03:33.059Z error: Found missing class or attribute (datum): [urn:oslo-toolchain:9a22a50a665ab9d8bdea28d5b487ad95086746bbaed8635f6827bbaafdeb16cd](all-onderneming.jsonld#L590) in Vocabulary

2026-06-17T18:03:33.059Z error: Found missing class or attribute (^voorkeursnaam): [urn:oslo-toolchain:0f011509e388c273c5e0904516b57043b486ab0ad6cb40e7ab92b8b8b0e238e7](all-onderneming.jsonld#L634) in Vocabulary

2026-06-17T18:03:33.059Z error: Found missing class or attribute (^alternatieveNaam): [urn:oslo-toolchain:114c71cc21da4d2403d5a7ca04e9ab9a3d4eed7d6fb4d6a49c5d3825402ef26e](all-onderneming.jsonld#L672) in Vocabulary

2026-06-17T18:03:33.059Z error: Found missing class or attribute (gml): [urn:oslo-toolchain:42680944cedc7e21703971a6a234cb91e1292c9d1e6777ef9066612ef2bdac6a](all-onderneming.jsonld#L716) in Vocabulary

2026-06-17T18:03:33.059Z error: Found missing class or attribute (wkt): [urn:oslo-toolchain:3bd1a7433ee23df19d44c5244b1c120695416a3f47212a2b82b1936433538caf](all-onderneming.jsonld#L760) in Vocabulary

2026-06-17T18:03:33.059Z error: Found missing class or attribute (administratieveEenheidNiveau1): [urn:oslo-toolchain:0d288e4cd816d03f23c2a0b38e1f68a1f8c93e8386d011cf8dab0308100abec6](all-onderneming.jsonld#L804) in Vocabulary

2026-06-17T18:03:33.059Z error: Found missing class or attribute (administratieveEenheidNiveau2): [urn:oslo-toolchain:7cb9d5e69c763037979dda879753e297273ae7d7135c4637d1d3b06fdbf41380](all-onderneming.jsonld#L842) in Vocabulary

2026-06-17T18:03:33.059Z error: Found missing class or attribute (adresgebied): [urn:oslo-toolchain:23e762275141498a346dea5c06ef44c8883c1b624460551eb768a4bf70924262](all-onderneming.jsonld#L880) in Vocabulary

2026-06-17T18:03:33.059Z error: Found missing class or attribute (huisnummer): [urn:oslo-toolchain:e4b0bcb57f41504480b94d740b68fb984cef611e8e8b0bab2a8fb8e5073660f8](all-onderneming.jsonld#L1012) in Vocabulary

2026-06-17T18:03:33.059Z error: Found missing class or attribute (locatieaanduiding): [urn:oslo-toolchain:602078a04b1c7a05e1882dbbfd3a3aff980ef3a1cf06f8978088c35cfaf76d11](all-onderneming.jsonld#L1100) in Vocabulary

2026-06-17T18:03:33.059Z error: Found missing class or attribute (locatienaam): [urn:oslo-toolchain:774d03efce61dd38a0396e252fc94ebdb0c18a67f95af545266a90a036eaf88e](all-onderneming.jsonld#L1138) in Vocabulary

2026-06-17T18:03:33.059Z error: Found missing class or attribute (postbus): [urn:oslo-toolchain:3e203627895e721b6f623adc894c11dcc3b778af48cfc7b47bedaaac7ff34bb3](all-onderneming.jsonld#L1176) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (postcode): [urn:oslo-toolchain:e72dcb1029508b5ba2fdd4f0dcce33e93e73893f03fd2dec89b6bf1d4c18f22d](all-onderneming.jsonld#L1214) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (postnaam): [urn:oslo-toolchain:d355e05dc0aedac28a1a553044e3ca89780df9187f1322006874cd6b1add38b5](all-onderneming.jsonld#L1252) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (straatnaam): [urn:oslo-toolchain:e9bfde1336d6288da88af4d0ab02d74242d28b7fcb98249ab5723075d37ebcb6](all-onderneming.jsonld#L1290) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (volledigAdres): [urn:oslo-toolchain:081eee64572a496c46a7c0e4330f10686d8281b2b081cfdf351f286aa091522d](all-onderneming.jsonld#L1328) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (inXSDDate): [urn:oslo-toolchain:762c8749a0b863902eaa022a330c17659e7025b91376562676e2373593e15357](all-onderneming.jsonld#L1372) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (email): [urn:oslo-toolchain:de44d3d17b9d192298ffc92d73d15eb5c442fffaf9a6256cf36efd8b6359050e](all-onderneming.jsonld#L1410) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (telefoon): [urn:oslo-toolchain:6aa53675f4eabb8e738a9c75195181ee36ac660a324d186cf6ec8a8d69ce60bf](all-onderneming.jsonld#L1448) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (datumOprichting): [urn:oslo-toolchain:e6ef6fddb50f6a05d34bece4cd76bed79e5a5f10a5c325d5e7a93e48ffa0492f](all-onderneming.jsonld#L1486) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (datumStopzetting): [urn:oslo-toolchain:e7e967fd4b01c74bb33f66ca27f1a4ab31eee3382e7047c784c15fdc2a141e33](all-onderneming.jsonld#L1524) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (registratie): [urn:oslo-toolchain:198d3aae75ab6c1da4b296174c8d63243b460591dc303f6c6dcf209f79b1839b](all-onderneming.jsonld#L1724) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (registratie): [urn:oslo-toolchain:9fc86c0f6c4d7e14d66d6cc22ecc275efb739325a6b4706a66fdb535a4026891](all-onderneming.jsonld#L2324) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (^activiteit): [urn:oslo-toolchain:ae7806a6493f959ced4cd1911b2b458778a62e75a5c8a6dce5681c9181ecb4b6](all-onderneming.jsonld#L1850) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (^contactinfo): [urn:oslo-toolchain:6a744ae3176e36f079b22cc80125747fce2e3996e4f3aae086ff0537e750cb51](all-onderneming.jsonld#L1895) in Vocabulary

2026-06-17T18:03:33.060Z error: Found missing class or attribute (^status): [urn:oslo-toolchain:654a26d3785616cc137deabcc1cf52e95577a7b5aa1ae488df3af731372174cf](all-onderneming.jsonld#L1933) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (reden): [urn:oslo-toolchain:0ff25f143b2fc4952d7dbdb356f107536eaa376aabd03922801638b1a9789c94](all-onderneming.jsonld#L2023) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (isBeïnvloedDoor): [urn:oslo-toolchain:bf13052c123de2aa48fc1578abc8e850525a74bfea31cc47c0547cba09d2b7c3](all-onderneming.jsonld#L2121) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (isBeïnvloedDoor): [urn:oslo-toolchain:00a102f990c2a05fe5ccc49d3f688e17b4a269e41f4121b9bc0e8d47046a87d1](all-onderneming.jsonld#L2241) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (^tijd): [urn:oslo-toolchain:9ef720eaeadd4e3a975fac3bdcc3352903c03f0f9277ba043db55c74e67ab42f](all-onderneming.jsonld#L2159) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (vestigingsAdres): [urn:oslo-toolchain:f82068c850d415c1522a98eb2d9ace33d398da76101ca66aca4c40990f3808cb](all-onderneming.jsonld#L2197) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (geometrie): [urn:oslo-toolchain:fde99bc915ef9a18c0985488351ffa432f08b7bd8c8c865fa84b521c5310cd94](all-onderneming.jsonld#L2368) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (^tot): [urn:oslo-toolchain:5b782dfde3f73e6246d05439471fe63ac562c010aa72920f61209181107f0e21](all-onderneming.jsonld#L2406) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (^van): [urn:oslo-toolchain:b36fc8eaeb264d201f7539366b257cb958a99f489c6c63fa0f3dae280bd230d3](all-onderneming.jsonld#L2444) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (adres): [urn:oslo-toolchain:8cd3bf89769aacd82d2046c67a009e9e7872199e77aa5fd0bd4ac500a4292af8](all-onderneming.jsonld#L2482) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (^omvang): [urn:oslo-toolchain:d9a540ef8bc980170f61a50652293bbeea445832120ab825756c96c3d930d443](all-onderneming.jsonld#L2520) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (^wordtGerefereerdIn): [urn:oslo-toolchain:f17727662f8e60996465e2b99ee6727fc364bbe1d8cc378d3f7230bf2796346f](all-onderneming.jsonld#L2616) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (gaatOver): [urn:oslo-toolchain:99e0e906a378f9589bb1954afa537760b65f4de20b75070c7471cda4025068c1](all-onderneming.jsonld#L2654) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (vestigingVan): [urn:oslo-toolchain:038710791a5ceb5e6fdc7d2bb8cf7ce7d5ef64016715f9906357f8992246e524](all-onderneming.jsonld#L2736) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (^heeftGeregistreerdeVestiging): [urn:oslo-toolchain:5fe639e88a96a52832e8f07439d1b87df04df5ccff5a587dd1b4d0a764ba0078](all-onderneming.jsonld#L2774) in Vocabulary

2026-06-17T18:03:33.061Z error: Found missing class or attribute (^isVeranderdDoor): [urn:oslo-toolchain:297ed63fc962621f234b01bd90f891bf8a129e56e49eb5039f483b209a2badeb](all-onderneming.jsonld#L2818) in Vocabulary

2026-06-17T18:03:33.062Z error: Found missing class or attribute (Geometrie): [urn:oslo-toolchain:263ecd9d893e50c5ed8ca245bfa5c9af4606ebeb745a6773127191a16341095a](all-onderneming.jsonld#L2887) in Vocabulary

2026-06-17T18:03:33.062Z error: Found missing class or attribute (GeografischePositie): [urn:oslo-toolchain:39a0907ce6060ecfa67429be0d9e429d2e35ad95d7673b8ed43d92a6c1dbbb25](all-onderneming.jsonld#L2923) in Vocabulary

2026-06-17T18:03:33.062Z error: Found missing class or attribute (Identificator): [urn:oslo-toolchain:d283a98068ef27c6f8f21c12a9a48f82a28484ff00a297b39be62f8333bc43ff](all-onderneming.jsonld#L2947) in Vocabulary

2026-06-17T18:03:33.062Z error: Found missing class or attribute (Adresvoorstelling): [[urn:oslo-toolchain:56c7f1acdf28d38b6c07d1050d78678e52dfe41db55209053758c6fc89c0b365](all-onderneming.jsonld#L2977)](all-onderneming.jsonld#L3303) in Vocabulary

2026-06-17T18:03:33.062Z error: Found missing class or attribute (TemporeleEntiteit): [urn:oslo-toolchain:62d845d5034ffa251aa752c3748579451b12e8d3401d721e6c1e98e198be2fb4](all-onderneming.jsonld#L3012) in Vocabulary

2026-06-17T18:03:33.062Z error: Found missing class or attribute (Moment): [urn:oslo-toolchain:39b3f546caa4d79d43c369e1c79ae01b2480c3d1c25dcd9048fb6d02175c45e7](all-onderneming.jsonld#L3042) in Vocabulary

2026-06-17T18:03:33.062Z error: Found missing class or attribute (Periode): [urn:oslo-toolchain:801183c01ebb834c90cfa2d3b31608697f9960c930091111c696c38e53e86444](all-onderneming.jsonld#L3071) in Vocabulary

2026-06-17T18:03:33.062Z error: Found missing class or attribute (Contactinfo): [urn:oslo-toolchain:07007c84ed11ec5e456c9feb96ee57c6039a44e6f959cfe1e19e0273bb73e303](all-onderneming.jsonld#L3100) in Vocabulary

2026-06-17T18:03:33.062Z error: Found missing class or attribute (Resource): [urn:oslo-toolchain:4842f50f60e07dd0cf376158a4e474e5cdce07e15353211c98cc558bb3d555d1](all-onderneming.jsonld#L3191) in Vocabulary

2026-06-17T18:03:33.062Z error: Found missing class or attribute (Organisatie): [urn:oslo-toolchain:1a5d11580fc42d42bf464c4a73a9970b630c125bb102c959b57ef346f7f9e14e](all-onderneming.jsonld#L3218) in Vocabulary

2026-06-17T18:03:33.062Z error: Found missing class or attribute (Agent): [urn:oslo-toolchain:f4d4156ba67eefb9002e9a692d143bfedf6be8564bd99cf76a99a0bb90e0a67b](all-onderneming.jsonld#L3270) in Vocabulary

2026-06-17T18:03:33.062Z error: Found missing class or attribute (Agent): [urn:oslo-toolchain:efa684849f990ecc6958e6b72d4b19a69647231a0e0679289a2965f695f9a88e](all-onderneming.jsonld#L3429) in Vocabulary

2026-06-17T18:03:33.062Z error: Found missing class or attribute (Rechtspersoonlijkheidtype-v1): [urn:oslo-toolchain:453574928ade358104eae5964241515632b6be31e5c14889f5e7dd745283632c](all-onderneming.jsonld#L3342) in Vocabulary

2026-06-17T18:03:33.063Z error: Found missing class or attribute (Rechtstoestandtype-v1): [urn:oslo-toolchain:32ddb838d901eec0de753b1f2cf6518beec3fb5aaf2c545e8802bdc3c4746794](all-onderneming.jsonld#L3371) in Vocabulary

2026-06-17T18:03:33.063Z error: Found missing class or attribute (Rechtsvormtype-v1): [urn:oslo-toolchain:5f944a50579282850cae493c84194e45382130a9f6001f0234386004d8cd133a](all-onderneming.jsonld#L3400) in Vocabulary

2026-06-17T18:03:33.063Z error: Found missing class or attribute (Activiteittype-v1): [urn:oslo-toolchain:7e99f0fce20abe1a8278d18710156c44005aae83c04a26253acccf87b854a525](all-onderneming.jsonld#L3458) in Vocabulary

2026-06-17T18:03:33.063Z error: Found missing class or attribute (OrganisatieStatus-v1): [urn:oslo-toolchain:358322e0542f9eded6f69b666426547c66ac2347b12fe02850b90f5dcab7a5b1](all-onderneming.jsonld#L3481) in Vocabulary

2026-06-17T18:03:33.063Z error: Found missing class or attribute (Doorhalingstype-v1): [urn:oslo-toolchain:2244aba989a23c8c81be978a06cd5ed1881adcf521c31a05f1ed2075167126bd](all-onderneming.jsonld#L3504) in Vocabulary

2026-06-17T18:03:33.063Z error: Found missing class or attribute (RedenDoorhaling-v1): [urn:oslo-toolchain:bb938b4f03ded48b1a9c447cdafab2fb8c926ac06a010992a01d4c61407d7af9](all-onderneming.jsonld#L3533) in Vocabulary

2026-06-17T18:03:33.063Z error: Found missing class or attribute (StopzettingType-v1): [urn:oslo-toolchain:478b09a25a10f9210d94ca07421c5462b05fd59151e23a0be6c10ed926da5926](all-onderneming.jsonld#L3562) in Vocabulary

2026-06-17T18:03:33.063Z error: Found missing class or attribute (Omvangklasse-v1): [urn:oslo-toolchain:74c12a0a2ede6b2af34c6acf9f955c6cf542c8588855fe85504796d8a2fb190c](all-onderneming.jsonld#L3591) in Vocabulary

2026-06-17T18:03:33.063Z error: Found missing class or attribute (RapportType-v1): [urn:oslo-toolchain:8d6da34861ca7b670b7d6f86ac5ca126eafe0df009900318ba91e9a6abd93bac](all-onderneming.jsonld#L3614) in Vocabulary

2026-06-17T18:03:33.063Z info: Validation successful! All assigned URIs are whitelisted.

2026-06-17T18:03:33.063Z info: Validation found 1 sentences with spelling mistakes.

2026-06-17T18:03:33.063Z info: Validation successful! All labels seem to be valid, no spelling mistakes found.

2026-06-17T18:03:33.063Z info: Validation successful! All base URIs seem to be valid.

2026-06-17T18:03:33.063Z info: Validation found 69 missing referenced classes or attributes.

